
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int O_APPEND ;
 int O_CREAT ;
 int O_RDWR ;
 int O_WRONLY ;
 int close (int) ;
 int dup2 (int,int) ;
 int fflush (int ) ;
 char* logname ;
 int open (char*,int,int) ;
 int stderr ;
 int stdout ;

__attribute__((used)) static void reopen_logs (void) {
  int fd;

  fflush (stdout);
  fflush (stderr);

  if ((fd = open ("/dev/null", O_RDWR, 0)) != -1) {
    dup2 (fd, 0);
    dup2 (fd, 1);
    dup2 (fd, 2);
    if (fd > 2) {
      close (fd);
    }
  }
  if (logname && (fd = open (logname, O_WRONLY|O_APPEND|O_CREAT, 0640)) != -1) {
    dup2 (fd, 1);
    dup2 (fd, 2);
    if (fd > 2) {
      close (fd);
    }
  }
}
